--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
         
-        <div class="img"><img src="images/Michael.PNG" id="char-img" alt="Character image"></div>
+        <div class="img"><img src="Michael.PNG" id="char-img" alt="Character image"></div>
         <button id="button" type="button" class="button">Get a Random quote</button>
         <div class="quote-cont">
 
